Added list to left aside

--- a/html/index.html
+++ b/html/index.html
@@ -23,7 +23,24 @@
     </header>
     <main>
         <aside>
-
+            <h2>Categorias</h2>
+            <ul>
+                <li>Dormitorio</li>
+                <li>Oficina y escritorio</li>
+                <li>Sala y comedor</li>
+                <li>Mesas de comedor</li>
+                <li>Cocina</li>
+                <li>Terraza</li>
+            </ul>
+            <h2>Webs de interés</h2>
+            <ul>
+                <li><a href="">Ikea</a></li>
+                <li><a href="">Casika</a></li>
+                <li><a href="https://www.rocasa.com.es/">Rocasa</a></li>
+                <li><a href="">Zara Home</a></li>
+                <li><a href=""></a>Conforama</li>
+                <li><a href="https://casika.es/muebles/">Casika</a></li>
+            </ul>
         </aside>
         <section>
             
