Added list to left aside

--- a/html/index.html
+++ b/html/index.html
@@ -34,12 +34,12 @@
             </ul>
             <h2>Webs de interés</h2>
             <ul>
-                <li><a href="">Ikea</a></li>
-                <li><a href="">Casika</a></li>
+                <li><a href="https://www.ikea.es/">Ikea</a></li>
+                <li><a href=""></a></li>
                 <li><a href="https://www.rocasa.com.es/">Rocasa</a></li>
-                <li><a href="">Zara Home</a></li>
-                <li><a href=""></a>Conforama</li>
-                <li><a href="https://casika.es/muebles/">Casika</a></li>
+                <li><a href="https://www.zarahome.com/ic">Zara Home</a></li>
+                <li><a href="https://www.conforama.es/"></a>Conforama</li>
+                <li><a href="https://casika.es/">Casika</a></li>
             </ul>
         </aside>
         <section>
