finished all styles, and media query for mobile

--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="/css/styles.css">
-
+    <script src="https://kit.fontawesome.com/eca7a7fca6.js" crossorigin="anonymous"></script>
 
     <title>Document</title>
 
@@ -24,23 +24,23 @@
 
     <main>
         <aside class="left__aside">
-            <h3>Categorias</h3>
             <ul>
-                <li>Dormitorio</li>
-                <li>Oficina y escritorio</li>
-                <li>Sala y comedor</li>
-                <li>Mesas de comedor</li>
-                <li>Cocina</li>
-                <li>Terraza</li>
+                <h3>Category</h3>
+                <li>Office & Desk</li>
+                <li>Dining table</li>
+                <li>Dining room</li>
+                <li>Bedroom</li>
+                <li>Kitchen</li>
+                <li>Outsite</li>
             </ul>
-            <h3>Webs de interés</h3>
             <ul>
-                <li><a href="https://www.ikea.es/">Ikea</a></li>
-                <li><a href="https://www.muebles.es/muebles-de-salon/">Muebles</a></li>
-                <li><a href="https://www.rocasa.com.es/">Rocasa</a></li>
-                <li><a href="https://www.zarahome.com/ic">Zara Home</a></li>
-                <li><a href="https://www.conforama.es/">Conforama</a></li>
-                <li><a href="https://casika.es/">Casika</a></li>
+                <h3>Webs de interés</h3>
+                <li><a class="links" href="https://www.zarahome.com/ic">Zara Home</a></li>
+                <li><a class="links" href="https://www.conforama.es/">Conforama</a></li>
+                <li><a class="links" href="https://www.muebles.es/muebles-de-salon/">Muebles</a></li>
+                <li><a class="links" href="https://www.rocasa.com.es/">Rocasa</a></li>
+                <li><a class="links" href="https://casika.es/">Casika</a></li>
+                <li><a class="links" href="https://www.ikea.es/">Ikea</a></li>
             </ul>
         </aside>
 
@@ -48,18 +48,36 @@
             <div class="product__card">
                 <img src="/images/modern_table.jpg" alt="Wood table">
                 <div class="product__info">
-                    <h2>Wood Table</h3>
+                    <h2>Dining Table</h3>
                     <p class="product__price">259€</p>
-                    <p class="product__description">A modern wooden table with a sleek, minimalist design. It features clean lines, smooth surfaces, and a natural wood finish, giving it a warm yet contemporary look. The sturdy legs are either tapered or straight, often made of the same wood or metal for added contrast. Perfect for dining or office spaces, the table blends functionality with modern elegance.</p>
+                    <p class="product__description">A sleek, minimalist modern wooden table with clean lines, a natural finish, and sturdy legs, ideal for dining or office use.</p>
                     <button>Buy Now</button>
                 </div>
             </div>
             <div class="product__card">
-                <img src="/images/modern_table.jpg" alt="Wood table">
+                <img src="/images/wardrobe.webp" alt="Wood table">
                 <div class="product__info">
-                    <h2>Wood Table</h3>
-                    <p class="product__price">259€</p>
-                    <p class="product__description">A modern wooden table with a sleek, minimalist design. It features clean lines, smooth surfaces, and a natural wood finish, giving it a warm yet contemporary look. The sturdy legs are either tapered or straight, often made of the same wood or metal for added contrast. Perfect for dining or office spaces, the table blends functionality with modern elegance.</p>
+                    <h2>Wardrobe</h3>
+                    <p class="product__price">129€</p>
+                    <p class="product__description">A modern wooden wardrobe with four doors, featuring a sleek, minimalist design, discreet handles, and ample storage space with shelves, drawers, and hanging areas.</p>
+                    <button>Buy Now</button>
+                </div>
+            </div>
+            <div class="product__card">
+                <img src="/images/wardrobe.webp" alt="Wood table">
+                <div class="product__info">
+                    <h2>Wardrobe</h3>
+                    <p class="product__price">129€</p>
+                    <p class="product__description">A modern wooden wardrobe with four doors, featuring a sleek, minimalist design, discreet handles, and ample storage space with shelves, drawers, and hanging areas.</p>
+                    <button>Buy Now</button>
+                </div>
+            </div>
+            <div class="product__card">
+                <img src="/images/wardrobe.webp" alt="Wood table">
+                <div class="product__info">
+                    <h2>Wardrobe</h3>
+                    <p class="product__price">129€</p>
+                    <p class="product__description">A modern wooden wardrobe with four doors, featuring a sleek, minimalist design, discreet handles, and ample storage space with shelves, drawers, and hanging areas.</p>
                     <button>Buy Now</button>
                 </div>
             </div>
@@ -81,7 +99,41 @@
     </main>
     
     <footer>
-
+        <h2>GoodWood</h2>
+        <section class="footer__list">
+            <ul>
+                <h3>About us</h3>
+                <li><a class="links alt" href="">Investors</a></li>
+                <li><a class="links alt" href="">Contact</a></li>
+                <li><a class="links alt" href="">News</a></li>
+                <li><a class="links alt" href="">Blog</a></li>
+                <li><a class="links alt" href="">Jobs</a></li>
+            </ul>
+            <ul>
+                <h3>Products</h3>
+                <li><a class="links alt" href="">Office & Desk</a></li>
+                <li><a class="links alt" href="">Dining table</a></li>
+                <li><a class="links alt" href="">Dining room</a></li>
+                <li><a class="links alt" href="">Bedroom</a></li>
+                <li><a class="links alt" href="">Kitchen</a></li>
+            </ul>
+            <ul>
+                <h3>Delivery & Payment</h3>
+                <li><a class="links alt" href="">Shipping Cost</a></li>
+                <li><a class="links alt" href="">Order History</a></li>
+                <li><a class="links alt" href="">Wish List</a></li>
+                <li><a class="links alt" href="">Delivery</a></li>
+            </ul>
+        </section>
+        <section class="footer__links">
+            <div class="footer__links--items">
+                <a href="" class="fa-brands fa-instagram"></a>
+                <a href="" class="fa-brands fa-facebook"></a>
+                <a href="" class="fa-brands fa-tiktok"></a>
+                <a href="" class="fa-brands fa-github"></a>
+                </div>
+            <p>Privacy Politics | Cookies Politics</p>
+        </section>
     </footer>
 </body>
 </html>
